--- a/frontend_/src/App.css
+++ b/frontend_/src/App.css
@@ -87,6 +87,10 @@ p {
 .about-section {
   margin-top: 40px;
   text-align: left;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 
 .example-section h2,
